--- a/index.html
+++ b/index.html
@@ -1,28 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- external stylesheet -->
     <link rel="stylesheet" href="./style.css">
+    <!-- font -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
     <title>OFC Screen</title>
 </head>
+
 <body>
-    <section class="main-screen">
-        <h1>office <span>campfire</span></h1>
-        <div class="container">
-        <div class="form-sec">
-<p>event name</p>
-<h2>Creating personal connections with the Team.</h2>
-<form action="">
-    <label for="">enter your full name</label>
-    <input type="text">
-    <p>select your avatar</p>
-    <img src="" alt="avatar">
-    <input type="submit"  value="Submit"> 
-</form>
+    <section class="wrapper">
+        <img src="./images/main-bg.png" alt="" class="main-bg">
+        <h1><span>office</span><br> campfire</h1>
+        <div class="main-screen">
+
+            <!-- <h1><span>office</span><br> campfire</h1> -->
+
+            <div class="form-sec">
+                <p>Event Name</p>
+                <h2>Creating personal connections with the Team.</h2>
+                <form action="">
+                    <label for="">Enter your full Name</label>
+                    <input type="text">
+                    <div class="avatar-sec">
+                        <p>Select your Avatar</p>
+                        <div class="flex-row">
+                            <div class="semi-circle">
+                            <img src="./images/avatar.png" alt="avatar"></div>
+                            <div class="semi-circle">
+                                <img src="./images/avatar.png" alt="avatar"></div>
+                                <div class="semi-circle">
+                                    <img src="./images/avatar.png" alt="avatar"></div>
+                                    <div class="semi-circle">
+                                        <img src="./images/avatar.png" alt="avatar"></div>
+                                        <div class="semi-circle">
+                                            <img src="./images/avatar.png" alt="avatar"></div>
+                        </div>
+                    </div>
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+
         </div>
-    </div>
     </section>
 </body>
+
 </html>
