update: avatar section

--- a/index.html
+++ b/index.html
@@ -24,21 +24,26 @@
                 <form action="">
                     <label for="">Enter your full Name</label>
                     <input type="text">
-                    <div class="avatar-sec">
+                    <ul class="avatar-sec">
                         <p>Select your Avatar</p>
-                        <div class="flex-row">
-                            <div class="semi-circle">
-                            <img src="./images/avatar.png" alt="avatar"></div>
-                            <div class="semi-circle">
-                                <img src="./images/avatar.png" alt="avatar"></div>
-                                <div class="semi-circle">
-                                    <img src="./images/avatar.png" alt="avatar"></div>
-                                    <div class="semi-circle">
-                                        <img src="./images/avatar.png" alt="avatar"></div>
-                                        <div class="semi-circle">
-                                            <img src="./images/avatar.png" alt="avatar"></div>
-                        </div>
-                    </div>
+                        <li><input type="radio" name="test" id="av1">
+                            <label for="av1"><img src="./images/avatar.png" /></label>
+                        </li>
+                        <li><input type="radio" name="test" id="av2">
+                            <label for="av2"><img src="./images/avatar.png" /></label>
+                        </li>
+                        <li><input type="radio" name="test" id="av3">
+                            <label for="av3"><img src="./images/avatar.png" /></label>
+                        </li>
+                        <li><input type="radio" name="test" id="av4">
+                            <label for="av4"><img src="./images/avatar.png" /></label>
+                        </li>
+                        <li><input type="radio" name="test" id="av5">
+                            <label for="av5"><img src="./images/avatar.png" /></label>
+                        </li>
+                    </ul>
+
+
                     <input type="submit" value="Submit">
                 </form>
             </div>
